# rickandmortyapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py  schemas.py
app/config/: settings.py
app/data/: characters.py
tests/: test_query.py
