[tool.poetry]
name = "rickandmortyapi"
version = "0.1.0"
description = "A GraphQL implementation of the Rick and Morty API"
authors = ["Jonathan Mandt <jonathan.mandt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
graphene = ">=3.0"
requests = "^2.27.1"
starlette-graphene3 = "^0.6.0"
fastapi = "^0.79.0"
promise = "^2.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-comprehensions = "^3.4.0"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.3.23"

[tool.black]
line-length = 120
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.4"]
build-backend = "poetry.core.masonry.api"
